[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
deps = "fawltydeps --check"
test = "rye test"
all = { chain = ["fmt", "lint", "deps", "test"] }

[project]
name = "votesmart"
version = "0.1.0"
description = "LLM assisted ballot research for Harris County Texas."
authors = [
    { name = "Barker, Daniel C.", email = "dcbark01@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=8.3.3",
    "fawltydeps~=0.17.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
	"A",    # warn about shadowing built-ins
	"E",    # style stuff, whitespaces
    "W",    # warnings
	"F",    # pyflakes lints
	"I",    # import sorting
	"N",    # naming
	"T100", # breakpoints
    "RUF100",  # Ruff (unused noqa)
]

[tool.ruff.lint.isort]
known-first-party = ["votesmart"]
